--- a/GiveCamp/packages.config
+++ b/GiveCamp/packages.config
@@ -33,5 +33,8 @@
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.4.0" targetFramework="net45" />
+  <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
+  <package id="Twitter.Bootstrap.MVC" version="1.1.6" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0.1" targetFramework="net45" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
