--- a/GiveCamp/GiveCamp.csproj
+++ b/GiveCamp/GiveCamp.csproj
@@ -327,6 +327,7 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Shared\_Sidebar.cshtml" />
+    <Content Include="Views\Shared\EditorTemplates\LimitedTextArea.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
