--- a/GiveCamp/Views/Web.config
+++ b/GiveCamp/Views/Web.config
@@ -18,6 +18,7 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="GiveCamp"/>
+        <add namespace="Forloop.HtmlHelpers"/>
       </namespaces>
     </pages>
   </system.web.webPages.razor>
