--- a/GiveCamp/Web.config
+++ b/GiveCamp/Web.config
@@ -15,7 +15,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-GiveCamp-20130413141231;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-GiveCamp-20130413141231.mdf" providerName="System.Data.SqlClient" />
+    <add name="GiveCampContext" connectionString="Data Source=.;Initial Catalog=GiveCamp2013;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
