--- a/GiveCamp/packages.config
+++ b/GiveCamp/packages.config
@@ -9,6 +9,7 @@
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="Forloop.HtmlHelpers" version="1.0.0" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
+  <package id="jQuery.MaskedInput" version="1.3.1.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
   <package id="knockoutjs" version="2.2.1" targetFramework="net45" />
