--- a/GiveCamp/GiveCamp.csproj
+++ b/GiveCamp/GiveCamp.csproj
@@ -605,6 +605,7 @@
     <Content Include="Views\Home\Sponsors.cshtml" />
     <Content Include="Views\Home\Location.cshtml" />
     <Content Include="Views\Home\SponsorInfo.cshtml" />
+    <Content Include="Views\Home\History.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
